<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">My Movies</string>
    <string name="content_authority">com.moviemagic.dpaul.android.app</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <string name="authenticator_account_type">moviemagic.dpaul.com</string>
    <!-- drawer related -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity Title -->
    <string name="title_activity_main_movie">Movie Main</string>
    <string name="title_activity_grid_movie">GridMovieActivity</string>
    <string name="title_activity_detail_movie">Movie Details</string>
...
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search results</string>
    <string name="title_activity_donate">Donate</string>

    <!-- Drawer menu items -->
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_tmdb_popular">Popular</string>
    <string name="drawer_menu_tmdb_toprated">Top Rated</string>
    <string name="drawer_menu_tmdb_nowplaying">Now playing</string>
    <string name="drawer_menu_tmdb_upcoming">Upcoming</string>
    <string name="drawer_menu_user_header">My Movie List</string>
    <string name="drawer_menu_user_favourite">Favourite</string>
    <string name="drawer_menu_user_watched">Watched</string>
...
