<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MovieMagicMainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="snap"
            android:elevation="@dimen/m_design_toolbar_elevation"
            app:subtitleTextColor="@color/accent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:ignore="UnusedAttribute"
            tools:targetApi="lollipop" />
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_movie_magic_main" />
</android.support.design.widget.CoordinatorLayout>
